[tool.poetry]
name = "ethereum-gasprice"
version = "1.0.0"
description = "Tool for fetching actual gasprice in ethereum blockchain"
authors = ["Nikita Yugov <nikitosnikn@yandex.ru>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/Elastoo-Team/ethereum-gasprice-py"
repository = "https://github.com/Elastoo-Team/ethereum-gasprice-py"
keywords = ["ethereum", "gasprice", "web3", "etherscan", "ethgasstation"]
include = [
    "LICENSE",
]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.25.1"
web3 = "^5.15.0"
eth-utils = "^1.10.0"
aiohttp = {version = "^3.7.3", optional = true}

[tool.poetry.dev-dependencies]
bumpversion = "^0.6.0"
pre-commit = "^2.10.0"

[tool.black]
line-length = 120
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | migrations
  )
)
'''

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
