[tool.poetry]
name = "ethereum-gasprice"
version = "1.2.3"
description = "Tool for fetching actual gasprice in ethereum blockchain"
authors = ["Nikita Yugov <nikitosnikn@yandex.ru>"]
license = "MIT"
readme = "README.md"

homepage = "https://github.com/Elastoo-Team/ethereum-gasprice-py"
repository = "https://github.com/Elastoo-Team/ethereum-gasprice-py"
documentation = "https://ethereum-gasprice.readthedocs.io"

keywords = ["ethereum", "gasprice", "web3", "etherscan", "ethgasstation"]
include = [
    "LICENSE",
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Other Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.dependencies]
python = "^3.7"
httpx = "^0.16.1"
eth-utils = ">=1.0.0"
web3 = {version = ">=5.0.0", optional = true}

[tool.poetry.dev-dependencies]
bumpversion = "^0.6.0"
pre-commit = "^2.10.0"

[tool.poetry.extras]
web3 = ["web3"]

[tool.black]
line-length = 120
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | migrations
  )
)
'''

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.core.masonry.api"
